crates/tests/databases-tests/src/cockroach/snapshots/databases_tests__cockroach__query_tests__sorting__select_order_by_artist_album_count_agg.snap
---
source: crates/tests/databases-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Iron Maiden"
      },
      {
        "Name": "Led Zeppelin"
      },
      {
        "Name": "Deep Purple"
      }
    ]
  }
]
